--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,23 @@
 name = "prism"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+keywords = ["math", "sampling", "geometry", "noise", "tesselation"]
+categories = [
+    "mathematics",
+    "graphics",
+    "simulation",
+    "science",
+    "visualization",
+]
+repository = "https://github.com/iMplode-nZ/prism"
+description = "A library for generating points in patterns within volumes"
 
 [dependencies]
 nalgebra = "0.33.0"
 rand = "0.8.5"
 rand_pcg = "0.3.1"
+rayon = { version = "1.10.0", optional = true }
 smallvec = "1.13.2"
 
 [dev-dependencies]
