Some work on extrude.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ categories = [
     "science",
     "visualization",
 ]
-repository = "https://github.com/iMplode-nZ/prism"
+repository = "https://github.com/entropylost/prism"
 description = "A library for generating points in patterns within volumes"
+readme = "README.md"
 
 [dependencies]
 nalgebra = "0.33.0"
@@ -22,4 +23,4 @@ rayon = { version = "1.10.0", optional = true }
 smallvec = "1.13.2"
 
 [dev-dependencies]
-macroquad = "0.4.11"
+macroquad = "0.4.13"
